--- a/remember/templates/user_remembers.html
+++ b/remember/templates/user_remembers.html
@@ -1,10 +1,9 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <title>$Title$</title>
-</head>
-<body>
-$END$
-</body>
-</html>
+{% extends "base_generic.html" %}
+
+{% block content %}
+<h1>Ваши воспоминания</h1>
+
+
+
+
+{% endblock %}
