--- a/remember/templates/index.html
+++ b/remember/templates/index.html
@@ -3,10 +3,6 @@
 {% block content %}
 <h1>Отметь воспоминания</h1>
 
-  <p>Добро пожаловать на сайт, который позволит сохранить важные для вас места</p>
-
-    <br>Авторизуйтесь:
-
-
+  <p>Добро пожаловать, {{ user.username }}</p>
 
 {% endblock %}
