--- a/remember/templates/base_generic.html
+++ b/remember/templates/base_generic.html
@@ -22,7 +22,12 @@
         <div class="col-sm-2">
             {% block sidebar %}
                 <div class="sidebar-nav list-group ">
-                    <a class="list-group-item list-group-item-action" href="{% url 'index' %}">Home</a>
+                    <a class="list-group-item list-group-item-action" href="{% url 'index' %}">Главная</a>
+                    {% if user.is_authenticated %}
+                    <a class="list-group-item list-group-item-action" href="{% url 'user_remembers' %}">Мои воспоминания</a>
+                    <a class="list-group-item list-group-item-action" href="{% url 'add_remember' %}">Добавить воспоминание</a>
+                    <a class="list-group-item list-group-item-action" href="{% url 'logout' %}">Выйти</a>
+                    {% endif %}
                 </div>
             {% endblock %}
         </div>
