--- a/remember/templates/base_generic.html
+++ b/remember/templates/base_generic.html
@@ -8,6 +8,9 @@
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
+    <script src="https://api-maps.yandex.ru/2.1/?apikey=a46dee32-68ec-46a3-af1f-06e9cc4498c8&lang=ru_RU" type="text/javascript">
+
+    </script>
 
     <!-- Добавление дополнительного статического CSS файла -->
     {% load static %}
