--- a/remember/templates/base_generic.html
+++ b/remember/templates/base_generic.html
@@ -27,7 +27,7 @@
                 <div class="sidebar-nav list-group ">
                     <a class="list-group-item list-group-item-action" href="{% url 'index' %}">Главная</a>
                     {% if user.is_authenticated %}
-                    <a class="list-group-item list-group-item-action" href="{% url 'user_remembers' %}">Мои воспоминания</a>
+                    <a class="list-group-item list-group-item-action" href="{% url 'remembers' %}">Мои воспоминания</a>
                     <a class="list-group-item list-group-item-action" href="{% url 'add_remember' %}">Добавить воспоминание</a>
                     <a class="list-group-item list-group-item-action" href="{% url 'logout' %}">Выйти</a>
                     {% endif %}
