--- a/remember/templates/index.html
+++ b/remember/templates/index.html
@@ -1,8 +1,9 @@
 {% extends "base_generic.html" %}
 
 {% block content %}
-<h1>Отметь воспоминания</h1>
+<h1>Воспоминания о посещенных местах...</h1>
 
-  <p>Добро пожаловать, {{ user.username }}</p>
+  <h3>Добро пожаловать, {{ user.username }}</h3>
+    <p> </p>
 
 {% endblock %}
