--- a/remember/templates/base_generic.html
+++ b/remember/templates/base_generic.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
 
-    {% block title %}<title>Local Library</title>{% endblock %}
+    {% block title %}<title>Places Remember</title>{% endblock %}
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
@@ -12,9 +12,7 @@
 
     </script>
 
-    <!-- Добавление дополнительного статического CSS файла -->
     {% load static %}
-    <link rel="stylesheet" href="{% static 'css/styles.css' %}">
 </head>
 
 <body>
