Add background & css style

--- a/remember/templates/remember/remember_detail.html
+++ b/remember/templates/remember/remember_detail.html
@@ -15,7 +15,8 @@
         }
     </script>
 
-    <h1>Воспоминание: <b>{{ remember.title }}</b></h1>
+    <h2>Воспоминание: <b>{{ remember.title }}</b></h2>
+            <hr style="background-color: #666666; height: 2px">
     <div class="row">
         <div class="col-md-5">
             <div class="form-group">
