--- a/remember/templates/index.html
+++ b/remember/templates/index.html
@@ -1,9 +1,13 @@
 {% extends "base_generic.html" %}
 
 {% block content %}
-<h1>Воспоминания о посещенных местах...</h1>
+    <h1>PlacesRemember</h1>
 
-  <h3>Добро пожаловать, {{ user.username }}</h3>
-    <p> </p>
+    <h3>Добро пожаловать,
+        {% if user.first_name and user.last_name %}
+            <b>{{ user.first_name }} {{ user.last_name }}</b></h3>
+        {% else %}
+            к сожалению, не знаю вашего имени
+        {% endif %}
 
 {% endblock %}
