--- a/remember/templates/remember/remember_list.html
+++ b/remember/templates/remember/remember_list.html
@@ -2,24 +2,20 @@
 
 {% block content %}
     <h1>Ваши воспоминания</h1>
+    <div style="width: 75%; max-width: 800px; min-width: 400px; margin: 0 auto; padding-top: 15px">
     {% if remember_list %}
-        <div class="col-sm-10">
-            <div class="sidebar-nav list-group ">
+            <div class="list-group " >
                 {% for remember in remember_list %}
-                    <div class="list-group-item ">
-                        <a class=" list-group-item-action"
+                    <div class=" ">
+                        <a class=" list-group-item-action list-group-item"
                            href="{{ remember.get_absolute_url }}">{{ remember.title }}</a>
                     </div>
-
-
                 {% endfor %}
             </div>
-        </div>
-
     {% else %}
         К сожалению, вы не записали еще ни одного воспоминания
     {% endif %}
-
+</div>
 
 
 {% endblock %}
