--- a/remember/templates/login.html
+++ b/remember/templates/login.html
@@ -9,14 +9,16 @@
         <div style="padding-top: 20px; "  class=" lead">
             <div class="row row-centered row-conformity" >
                 <div  class="col-sm-6 col-md-5 col-md-push-1 text-justify" >
-                    <b>PlacesRemember</b> - это не просто воспоминания
+                    <b>PlacesRemember</b> - это не просто воспоминания.
                 <br>Здесь Вы можете поставить точку на карте, ввести название и
-                описание места
+                описание места.
+                    <br>Мы сохраним Ваши заметки.
                     </div>
                 <div  class="col-sm-6 col-md-5 col-md-push-1 text-justify" >
+
                     В любой момент Вы можете освежить в памяти не только самые яркие впечатления, но и <u>геолокацию</u> с
                 точными
-                координатами вашего путешествия
+                координатами вашего путешествия.
                 </div>
             </div>
 
@@ -24,7 +26,7 @@
 
         <hr style="background-color: #666666; height: 2px">
         <div class="lead text-center">
-            После авторизации Вы сможете сохранить свои воспоминания о посещенных местах
+            Чтобы воспользоваться сайтом, необходимо авторизоваться
         </div>
         <div class=" text-center">
             <button type="button" value="" style="min-width: 250px; min-height: 50px" class="btn btn-primary"
