--- a/remember/templates/remember/remember_list.html
+++ b/remember/templates/remember/remember_list.html
@@ -1,7 +1,7 @@
 {% extends "base_generic.html" %}
 
 {% block content %}
-    <h1>Ваши воспоминания</h1>
+    <h1>Мои воспоминания</h1>
     <div style="width: 75%; max-width: 800px; min-width: 400px; margin: 0 auto; padding-top: 15px">
     {% if remember_list %}
             <div class="list-group " >
